# rust_structures

./: Cargo.toml  tatus
src/: laptop.rs  main.rs  person.rs
